fixed comment area spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -198,7 +198,6 @@ h1.entry-title{
    Sidebar
    ========================================================================== */
 
-#respond,
 .sidebar { 
   border-top: 1px solid #d88f28;
 }
@@ -218,6 +217,12 @@ h1.entry-title{
 article.hentry{
   border-bottom: 1px solid #473924;
 }
+
+#comments,
+#respond{
+  border-top: 1px solid #473924;
+}
+
 
 /* ==========================================================================
    Footer
